# Ezcript

./: Cargo.toml  README.es.md  README.md  ezcript  main.py  pyproject.toml
.github/workflows/: rust.yml
docs/: index.html  syntax.py
docs/css/: style.css
examples/: identifiers_and_booleans.ez  numbers.ez  operators.ez  strings.ez
ezcript/: repl.py
ezcript/lexer/: __init__.py  lexer.py
ezcript/tokens/: __init__.py  tokens.py
ezcript_lang/: repl.py
ezcript_lang/lexer/: __init__.py  lexer.py
ezcript_lang/tokens/: __init__.py  tokens.py
fol/: lexer.py  token.py
interpreter/ezcript/: Cargo.toml
interpreter/ezcript/src/: main.rs
interpreter/ezcript_ast/: Cargo.toml
interpreter/ezcript_ast/src/: ast.rs  expr.rs  expressions.rs  lib.rs  parser.rs  statements.rs
interpreter/ezcript_ast/tests/: test_ast.rs  test_parser.rs
interpreter/ezcript_class/: Cargo.toml
interpreter/ezcript_functions/: Cargo.toml
interpreter/ezcript_lexer/: Cargo.toml
interpreter/ezcript_lexer/src/: lexer.rs  lib.rs  tokens.rs
interpreter/ezcript_object/: Cargo.toml
interpreter/ezcript_result/: Cargo.toml
interpreter/ezcript_result/src/: lib.rs
interpreter/ezcript_runner/: Cargo.toml
interpreter/ezcript_runner/src/: lib.rs
page/css/: style.css
tests/: lexer_test.py  test_lexer.py
utils/: Cargo.toml
utils/decorators/: __init__.py  tokens.py
utils/src/: lib.rs
