[package]
name = "ezcript"
version = "0.0.0"
authors = ["FRostri <FRostri@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezcript_lexer = { path = "../ezcript_lexer" }
ezcript_result = { path = "../ezcript_result" }
ezcript_ast = { path = "../ezcript_ast" }
ezcript_runner = { path = "../ezcript_runner" }

clap = "2.33.3"
