[package]
name = "ezcript_ast"
version = "0.1.0"
authors = ["FRostri <isaachmi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezcript_lexer = { path = "../ezcript_lexer" }
ezcript_result = { path = "../ezcript_result" }
utils = { path = "../../utils" }
