[package]
name = "ezcript_object"
version = "0.1.0"
authors = ["FRostri <FRostri@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezcript_class = { path = "../ezcript_class" }
ezcript_functions = { path = "../ezcript_functions" }
